Cleanup and update Swagger docs
